# Turing_0.1

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  logging.conf  main.py  pyproject.toml  requirements.txt
configs/: config.yaml  evaluate.yaml
src/evaluate/: evaluate.py
src/manage/: __init__.py  config.py  data.py
src/model/: __init__.py  vit.py
src/trainer/: train.py
